Fix caption acronyms and revise technological situation

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -8,7 +8,7 @@
 
 \newacronym[longplural=Boletines Oficiales del Estado]{boe}{BOE}{Boletín Oficial del Estado}
 
-\newacronym[longplural=costes capitales]{capex}{CAPEX}{coste capitales}
+\newacronym[longplural=costes capitales]{capex}{CAPEX}{coste capital}
 
 \newacronym[longplural=Comisiones Nacionales de los Mercados y la Competencia]{cnmc}{CNMC}{Comisión Nacional de los Mercados y la Competencia}
 
