--- a/chapter1.tex
+++ b/chapter1.tex
@@ -5,9 +5,9 @@
 
 \begin{quotation}
 
-  El calor aprieta. Tratas de distraerte de las altas temperaturas y aliviar la pesadez del aire con tu programa favorito refrescante bebida en mano. En cambio, la nevera se mantiene inusualmente silenciosa, el ventilador permanece inmóvil y la televisión no parece despertar. Lentamente, la habitación se sume en la oscuridad.
+  El calor aprieta. Tratas de distraerte de las altas temperaturas y aliviar la pesadez del aire con tu programa favorito, refrescante bebida en mano. En cambio, la nevera se mantiene inusualmente silenciosa, el ventilador permanece inmóvil y la televisión no parece despertar. Lentamente, la habitación se sume en la oscuridad.
 
-  Un tiempo después, toda la estancia repentinamente se inunda nuevamente en la luz de las lámparas previamente impotentemente encendidas que vuelven a la vida, el apagón parece haber concluido. Comprendes que, acostumbrado a bastar con apretar el interruptor, rara vez reflexionas en el complejo entramado eléctrico detrás de algo tan simple que permanece oculto ante la mirada común.
+  Un tiempo después, toda la estancia repentinamente se inunda nuevamente en la luz de las lámparas previamente impotentemente encendidas que vuelven a la vida, el apagón parece haber concluido. Comprendes que, acostumbrado a bastar con apretar el interruptor, rara vez reflexionas en el complejo entramado eléctrico detrás de algo tan simple, que permanece oculto ante la mirada común.
 
 \end{quotation}
 
@@ -22,19 +22,19 @@ En la actualidad, existen multitud de soluciones energéticas con las que aprovi
 \begin{figure}
   \centering
   \includegraphics[width=0.5\linewidth]{figures/instalacion-bess.jpg}
-  \caption{Ilustración de la disposición una instalación híbrida de generación y almacenamiento\cite{deutz2023what}.}
+  \caption{Ilustración de la disposición una instalación híbrida de generación y almacenamiento~\cite{deutz2023what}.}
   \label{fig:instalacion-bess}
 \end{figure}
 
-Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología energética de almacenamiento que permiten, como su propio nombre indica, almacenar electricidad para su uso posterior. Esto facilita enormemente la gestión de la demanda y, crucialmente, mejora la estabilidad y eficiencia de la infraestructura eléctrica, pudiendo regularla activamente gracias a la rápida capacidad de conmutación de las baterías. De esta forma, son una de las tecnologías energéticas más conveniente para evitar posibles desajustes en la red~\cite{xu2014bess}.
+Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología energética de almacenamiento que permiten, como su propio nombre indica, almacenar electricidad para su uso posterior. Esto facilita enormemente la gestión de la demanda y, crucialmente, mejora la estabilidad y eficiencia de la infraestructura eléctrica, pudiendo regularla activamente gracias a la rápida capacidad de conmutación de las baterías. De esta forma, son una de las tecnologías energéticas más convenientes para evitar posibles desajustes en la red~\cite{xu2014bess}.
 
 Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más que nada, es justamente imprescindible controlar la carga y descarga de estos dispositivos cuidadosamente para prolongar su vida útil y asegurar el correcto funcionamiento de los mismos. Como las baterías cuentan con un \gls{capex} inicialmente considerable, pero un \gls{opex} mínimo~\cite{larsson2018cost}, lo que se busca es su rentabilidad mediante el beneficio generado a través del arbitraje de la energía almacenada en el mercado eléctrico.
 
-Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, indefinidamente ciclando la batería incansablemente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
+Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería indefinidamente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
 
-De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de ofertado manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
+De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de ofertado manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol, previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
-Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación que la entidad energética dueña de los activos energéticos tenía disponibles con anterioridad), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación.
+Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación que la entidad energética dueña de los activos energéticos tiene disponibles con anterioridad), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación.
 
 De esta forma, el sistema se divide en los apartados anteriormente mencionados. La infraestructura operacional, explicada en el capítulo~\ref{makereference3}, gestiona la capa de interacción de menor nivel disponible. El entorno de mercado, especificado en el capítulo~\ref{makereference4}, determina la información extraída de las instituciones regulatorias con las que se trabaja. La modelización estructural, puntualizada en el capítulo~\ref{makereference5}, habla de la lógica de negocio de las decisiones a tomar. El comando y control, precisado en el apartado~\ref{makereference6}, explica el flujo de vuelta a los activos físicos y la interacción de los agentes de mercado y operadores de telecontrol con el sistema. Finalmente, se describe la experimentación realizada en el capítulo~\ref{makereference7}.
 
@@ -47,7 +47,7 @@ A su vez, se definen varios objetivos secundarios complementarios al objetivo pr
 
 \begin{description}
 
-  \item[Maximizar la rentabilidad] Más allá de hacer funcionar el sistema, obtener la mayor rentabilidad entre la energía comprada y vendida es lo primordial. El sistema debe ser capaz de analizar las previsiones de precios del mercado eléctrico para programar de forma óptima los ciclos de carga y descarga, asegurando la compra de energía en los periodos de menor coste y su venta en los de mayor precio, además de tener en cuanta factores externos al mercado y rentabilizar los \glspl{capex} y \gls{opex}. Lo más importante es diferenciar el beneficio neto en euros y la rentabilidad en euros por megavatio hora como determina la \gls{cnmc} en el \gls{boe}~\cite{cnmc2025resolucion}, ya que esta última es la métrica verdaderamente usada para asegurar que se asigna el valor correcto a las unidades de energía usada.
+  \item[Maximizar la rentabilidad] Más allá de hacer funcionar el sistema, obtener la mayor rentabilidad entre la energía comprada y vendida es lo primordial. El sistema debe ser capaz de analizar las previsiones de precios del mercado eléctrico para programar de forma óptima los ciclos de carga y descarga, asegurando la compra de energía en los periodos de menor coste y su venta en los de mayor precio, además de tener en cuanta factores externos al mercado y rentabilizar los \glspl{capex} y \glspl{opex}. Lo más importante es diferenciar el beneficio neto en euros y la rentabilidad en euros por megavatio hora, como determina la \gls{cnmc} en el \gls{boe}~\cite{cnmc2025resolucion}, ya que esta última es la métrica verdaderamente usada para asegurar que se asigna el valor correcto a las unidades de energía usada.
 
   \item[Minimizar el desgaste de las baterías] Se busca gestionar la operación del activo, principalmente la profundidad de descarga y el número de ciclos, de manera que se prolongue su vida útil y se minimice el desgaste físico del \gls{soc}. Se pretende encontrar el equilibrio entre la rentabilidad a corto plazo y la sostenibilidad de la inversión a largo plazo (ganar mucho dinero cuanto antes pero gastar la batería contra no ofertar tan agresivamente y estabilizar el ciclado pudiendo aprovechar mejores oportunidades futuras). La métrica usada para medir el desgaste se trata del número de ciclos de carga completos que, a diferencia del \gls{soh}, permite estimar la evolución del desgaste más fácilmente.
 
