--- a/chapter3.tex
+++ b/chapter3.tex
@@ -10,7 +10,7 @@ Como es entendible, el desarrollo ha hecho uso de la infraestructura operacional
 \begin{figure}
   \centering
   \includesvg[width=0.5\linewidth]{figures/diagrama-bess.svg}
-  \caption{Diagrama de interno de un \gls{bess}~\cite{iberdrola2024bess}.}
+  \caption{Diagrama de interno de un sistema de almacenamiento de energía en baterías~\cite{iberdrola2024bess}.}
   \label{fig:diagrama-bess}
 \end{figure}
 
