--- a/principal.tex
+++ b/principal.tex
@@ -52,9 +52,12 @@
 
 \section*{Todo}
 \begin{enumerate}
+  \item Acrónimos MD MI MIC
+  \item Imagenes 0.75
+  \item Imagenes y tablas optional caption \\caption\[\]\{\} para que no salgan las citas en el indice de figuras/tablas
   \item Redactar capítulo estado de la cuestión (1 día)
   \item Elaborar diagrama Gantt de la sección plan de trabajo (1 día)
-  \item ¿Anexo de ecuaciones? (1 día)
+  \item ¿Anexo de símbolos? (1 día)
   \item Completar figuras (2 días)
 \end{enumerate}
 
