--- a/references.bib
+++ b/references.bib
@@ -150,6 +150,17 @@
   publisher = {Elsevier}
 }
 
+@article{he2015optimal,
+  title     = {Optimal bidding strategy of battery storage in power markets considering performance-based regulation and battery cycle life},
+  author    = {He, Guannan and Chen, Qixin and Kang, Chongqing and Pinson, Pierre and Xia, Qing},
+  journal   = {IEEE Transactions on Smart Grid},
+  volume    = {7},
+  number    = {5},
+  pages     = {2359--2367},
+  year      = {2015},
+  publisher = {IEEE}
+}
+
 @inproceedings{heredia2015economic,
   title        = {Economic analysis of battery electric storage systems operating in electricity markets},
   author       = {Heredia, F-Javier and Riera, Jordi and Mata, Montserrat and Escuer, Joan and Romeu, Jordi},
@@ -157,6 +168,16 @@
   pages        = {1--5},
   year         = {2015},
   organization = {IEEE}
+}
+
+@article{hu2021barriers,
+  title     = {Barriers to grid-connected battery systems: Evidence from the Spanish electricity market},
+  author    = {Hu, Yu and Soneira, David Soler and Sánchez, María Jesús},
+  journal   = {Journal of Energy Storage},
+  volume    = {35},
+  pages     = {102262},
+  year      = {2021},
+  publisher = {Elsevier}
 }
 
 @article{hu2022potential,
@@ -204,6 +225,14 @@
   note   = {Accedido: 2025-09-15}
 }
 
+@misc{irena2025irena,
+  title  = {IRENA - International Renewable Energy Agency},
+  author = {International Renewable Energy Agency},
+  url    = {https://www.irena.org/costs},
+  year   = {2025},
+  note   = {Accessed: 2025-09-15}
+}
+
 @inproceedings{kalenderova2024batery,
   title        = {Batery Energy Storage System (BESS) Siting},
   author       = {Kalenderova, Antoaneta},
@@ -213,10 +242,42 @@
   organization = {IEEE}
 }
 
+@mastersthesis{kivipelto2017grid,
+  title  = {Grid Scale Battery Energy Storage Investment Potential-Analysis and Simulations of Frequency Control Markets in Germany and the UK},
+  author = {Kivipelto, Samuli},
+  year   = {2017},
+  school = {University of Vaasa}
+}
+
+@article{kumar2019strategic,
+  title     = {Strategic integration of battery energy storage systems with the provision of distributed ancillary services in active distribution systems},
+  author    = {Kumar, Abhishek and Meena, Nand K and Singh, Arvind R and Deng, Yan and He, Xiangning and Bansal, RC and Kumar, Praveen},
+  journal   = {Applied Energy},
+  volume    = {253},
+  pages     = {113503},
+  year      = {2019},
+  publisher = {Elsevier}
+}
+
 @misc{larsson2018cost,
   title  = {Cost models for battery energy storage systems},
   author = {Larsson, Patrik and Börjesson, Philip},
   year   = {2018}
+}
+
+@article{louwen2018technological,
+  title   = {Technological learning in energy modelling: experience curves},
+  author  = {Louwen, Atse and Junginger, Martin and Krishnan, AL},
+  journal = {Policy Brief for REFLEX project},
+  year    = {2018}
+}
+
+@book{mathew2021climate,
+  author    = {Mathew Hampshire-Waugh},
+  title     = {Climate Change and the Road to Net-Zero},
+  publisher = {Crowstone Publishing},
+  year      = {2021},
+  isbn      = {1527287963}
 }
 
 @misc{mterd2024orden,
@@ -295,6 +356,17 @@
   number  = {3},
   pages   = {19},
   year    = {1999}
+}
+
+@article{tejada2019review,
+  title     = {A review of energy storage system legislation in the US and the European Union},
+  author    = {Tejada-Arango, Diego A and Siddiqui, Afzal S and Wogrin, Sonja and Centeno, Efraim},
+  journal   = {Current Sustainable/Renewable Energy Reports},
+  volume    = {6},
+  number    = {1},
+  pages     = {22--28},
+  year      = {2019},
+  publisher = {Springer}
 }
 
 @techreport{turkenburg2000renewable,
