--- a/chapter1.tex
+++ b/chapter1.tex
@@ -32,7 +32,7 @@ Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más 
 
 Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería indefinidamente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
 
-De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de ofertado manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol, previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
+De hecho, así es como nace \textsc{Optibat}, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de licitación manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol, previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
 Con esto, se detallan las decisiones de diseño relacionadas con la integración del sistema y los componentes de la arquitectura ya existentes (es decir, aspectos fundamentales de la operación que la entidad energética dueña de los activos energéticos tiene disponibles con anterioridad), el desarrollo con respecto a la creación de todos los elementos propios a tener en cuenta, la validación para asegurar la seguridad y correcto funcionamiento, el despliegue en relación a la puesta en marcha en instalaciones a gran escala y la experimentación comparativa en busca del mejor modo de operación.
 
