Make images clearer

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -299,7 +299,7 @@ La parametrización del conector, junto con la especificación de parte la lógi
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/administador-del-conector.png}
+  \includegraphics[width=0.75\linewidth]{figures/administador-del-conector.png}
   \caption{Interfaz del administrador del conector mostrando el descubrimiento de señales del dispositivo subordinado.}
   \label{fig:administador-del-conector}
 \end{figure}
@@ -320,8 +320,8 @@ Finalmente, intentando asegurar la sincronización de los sensores y evitar la p
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\linewidth]{figures/tiempo-mercados.png}
-  \caption{Calendario de negociación de los mercados eléctricos (excepto el mercado diario)~\cite{omie2025mercado}.}
+  \includegraphics[width=0.75\linewidth]{figures/tiempo-mercados.png}
+  \caption{Calendario de negociación de los mercados eléctricos intradiarios y continuo~\cite{omie2025mercado}.}
   \label{fig:tiempo-mercados}
 \end{figure}
 
