--- a/principal.tex
+++ b/principal.tex
@@ -53,8 +53,7 @@
 \section*{Todo}
 \begin{enumerate}
   \item Acrónimos MD MI MIC
-  \item Imagenes 0.75
-  \item Imagenes y tablas optional caption \\caption\[\]\{\} para que no salgan las citas en el indice de figuras/tablas
+  \item Imágenes y tablas optional caption \texttt{\textbackslash caption[]\{\}} para que no salgan las citas en el indice de figuras y tablas
   \item Redactar capítulo estado de la cuestión (1 día)
   \item ¿Anexo de símbolos? (1 día)
   \item Completar figuras (2 días)
